gccida/c2/expand_builtin_va_arg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_va_arg/src/builtins.c:3524:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_va_arg/src/builtins.c:3583:7: error: use of undeclared identifier 'expand_builtin_va_arg_gave_help'; did you mean 'expand_builtin_va_arg'?
if ( !expand_builtin_va_arg_gave_help ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      expand_builtin_va_arg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_va_arg/src/builtins.c:3512:6: note: 'expand_builtin_va_arg' declared here
rtx  expand_builtin_va_arg( tree valist, tree type) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_va_arg/src/builtins.c:3585:1: error: use of undeclared identifier 'expand_builtin_va_arg_gave_help'
expand_builtin_va_arg_gave_help = 1; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_va_arg/src/builtins.c:3604:22: error: use of undeclared identifier 'machine_mode'
v16 = gen_rtx_MEM( ( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( type->block.abstract_origin)) >> 1), v14); 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_va_arg/src/obj/builtins.o] Error 1
